More updates in ui

--- a/singleproduct.html
+++ b/singleproduct.html
@@ -28,9 +28,9 @@
                     </div>
                     <nav>
                         <ul id="MenuItems">
-                            <li>@Html.ActionLink("Home", "index")</li>
-                            <li>@Html.ActionLink("Products", "product_categories")</li>
-                            <li>@Html.ActionLink("Account", "login")</li>
+                            <li><a href="">Home</a></li>
+                            <li><a href="">Products</a></li>
+                            <li><a href="">Account</a></li>
                         </ul>
                     </nav>
                     <img src="/BLACKWING/menu.png" class="menu-icon" onclick="menutoggle()">
@@ -55,7 +55,7 @@
                         <option>10</option>
                     </select>
                     <input type="number" name="1">
-                    <a href="@Url.Action(" login","Main")" class="btn">Add To Cart </a>
+                    <a href="" class="btn">Add To Cart </a>
                     <h3>Product Details</h3>
                     <p>Details.</p>
                     <div class="review">
@@ -65,8 +65,8 @@
                         <i class="fa fa-star" aria-hidden="true"></i>
                         <i class="fa fa-star-o" aria-hidden="true"></i>
                     </div>
-                </div>
-            </div>
+                </div> 
+           </div>
         </div>
         <section id="testimonials">
             <div class="testimonials-heading">
