--- a/productslist.html
+++ b/productslist.html
@@ -28,36 +28,112 @@
                     </div>
                     <nav>
                         <ul id="MenuItems">
-                            <li>@Html.ActionLink("Home", "index")</li>
-                            <li>@Html.ActionLink("Products", "product_categories")</li>
-                            <li>@Html.ActionLink("Account", "login")</li>
+                            <li><a href="">Home</a></li>
+                            <li><a href="">Account</a></li>
                         </ul>
                     </nav>
                     <img src="/BLACKWING/menu.png" class="menu-icon" onclick="menutoggle()">
                 </div>
             </div>
         </div>
-        <div class="small-container single-product">
+        <div class="small-container">
+            <div class="row row-2">
+                <h2>Boots</h2>
+            </div>
+            <div class="searchbox">
+                <input type="text" name="" placeholder="Find your desire item">
+                <button>Search</button>
+            </div>
+            <br />
             <div class="row">
-                <div class="col-2">
-                    <img src="/BLACKWING/B1-Almond Boot.jpg">
+                <div class="col-4">
+                    <a href=""><img src="/BLACKWING/B2-Brogue Oxford Zero Wingtip.jpg"></a>
+                    <h4>Sample</h4>
+                    <h5>₱999</h5>
+                    <div class="review">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                    </div>
                 </div>
-                <div class="col-2">
-                    <p style="color:#000000">Home / BOOTS</p>
-                    <h1 style="color:#000000">Almond Boots</h1>
-                    <h4>₱500</h4>
-                    <select>
-                        <option>Select Size</option>
-                        <option>7</option>
-                        <option>8</option>
-                        <option>9</option>
-                        <option>9.5</option>
-                        <option>10</option>
-                    </select>
-                    <input type="number" name="1">
-                    <a href="@Url.Action(" login","Main")" class="btn">Add To Cart </a>
-                    <h3>Product Details</h3>
-                    <p>Details.</p>
+                <div class="col-4">
+                    <a href=""><img src="/BLACKWING/B2-Brogue Oxford Zero Wingtip.jpg"></a>
+                    <h4>Sample</h4>
+                    <h5>₱999</h5>
+                    <div class="review">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <a href=""><img src="/BLACKWING/B2-Brogue Oxford Zero Wingtip.jpg"></a>
+                    <h4>Sample</h4>
+                    <h5>₱999</h5>
+                    <div class="review">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <a href=""><img src="/BLACKWING/B2-Brogue Oxford Zero Wingtip.jpg"></a>
+                    <h4>Sample</h4>
+                    <h5>₱999</h5>
+                    <div class="review">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <a href=""><img src="/BLACKWING/B2-Brogue Oxford Zero Wingtip.jpg"></a>
+                    <h4>Sample</h4>
+                    <h5>₱999</h5>
+                    <div class="review">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <a href=""><img src="/BLACKWING/B2-Brogue Oxford Zero Wingtip.jpg"></a>
+                    <h4>Sample</h4>
+                    <h5>₱999</h5>
+                    <div class="review">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <a href=""><img src="/BLACKWING/B2-Brogue Oxford Zero Wingtip.jpg"></a>
+                    <h4>Sample</h4>
+                    <h5>₱999</h5>
+                    <div class="review">
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star" aria-hidden="true"></i>
+                        <i class="fa fa-star-o" aria-hidden="true"></i>
+                    </div>
+                </div>
+                <div class="col-4">
+                    <a href=""><img src="/BLACKWING/B2-Brogue Oxford Zero Wingtip.jpg"></a>
+                    <h4>Sample</h4>
+                    <h5>₱999</h5>
                     <div class="review">
                         <i class="fa fa-star" aria-hidden="true"></i>
                         <i class="fa fa-star" aria-hidden="true"></i>
@@ -68,59 +144,7 @@
                 </div>
             </div>
         </div>
-        <section id="testimonials">
-            <div class="testimonials-heading">
-                <span>Reviews</span>
-            </div>
-            <div class="testimonials-box-container">
-                <div class="testimonials-box">
-                    <div class="box-top">
-                        <div class="profile">
-                            <div class="profile-img">
-                                <img src="/Person/Joshua.jpg">
-                            </div>
-                            <div class="name-user">
-                                <strong>Joshua Celis</strong>
-                            </div>
-                        </div>
-                        <div class="review">
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                            <i class="fa fa-star-o" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                    <div class="client-comment">
-                        <p>Maganda naman, Sakto sa paa ko. Cute ren</p>
-                    </div>
-                </div>
-            </div>
-            <div class="testimonials-box-container">
-                <div class="testimonials-box">
-                    <div class="box-top">
-                        <div class="profile">
-                            <div class="profile-img">
-                                <img src="/Person/Jade.jpg">
-                            </div>
-                            <div class="name-user">
-                                <strong>Jade Oloroso</strong>
-                            </div>
-                        </div>
-                        <div class="review">
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                            <i class="fa fa-star" aria-hidden="true"></i>
-                        </div>
-                    </div>
-                    <div class="client-comment">
-                        <p>Sulit bili ko ang ganda</p>
-                    </div>
-                </div>
-            </div>
-        </section>
+
     </div>
     <div class="footer">
         <div class="container">
